--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/app/styles/main.scss"
+              "src/app/styles/main.scss",
+              "node_modules/spectre.css/dist/spectre-icons.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -89,7 +90,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/app/styles/main.scss"
+              "src/app/styles/main.scss",
+              "node_modules/spectre.css/dist/spectre-icons.min.css"
             ],
             "scripts": [],
             "assets": [
