--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   "private": true,
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "~8.0.2",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/common": "~8.0.2",
+    "@angular/compiler": "~8.0.2",
+    "@angular/core": "~8.0.2",
+    "@angular/forms": "~8.0.2",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/platform-browser": "~8.0.2",
+    "@angular/platform-browser-dynamic": "~8.0.2",
+    "@angular/router": "~8.0.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "http-status-codes": "^1.3.2",
     "normalizr": "^3.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.2",
     "spectre.css": "^0.5.8",
     "tslib": "^1.9.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "~0.8.26"
+    "web-animations-js": "github:angular/web-animations-js#release_pr208",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.7",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.2",
+    "@angular/language-service": "~8.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^1.15.1",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "https-proxy-agent": "^2.2.1",
     "husky": "^2.2.0",
     "jasmine-core": "~2.99.1",
@@ -73,7 +73,7 @@
     "stylelint-scss": "^3.6.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
+    "typescript": "~3.4.5",
     "webpack-bundle-analyzer": "^3.3.2"
   },
   "husky": {
